Fix issue with horizontal overflow

--- a/src/pages/workshop/workshop-page.css
+++ b/src/pages/workshop/workshop-page.css
@@ -1,13 +1,7 @@
 @import '../../root.css';
 
 .workshop-page-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: start;
-    min-height: 100vh;
-    width: 100%;
+    height: 100vh;
     background-color: var(--primary-color);
 }
 
@@ -15,8 +9,10 @@
     color: var(--font-black);
     font-weight: bold;
     font-size: 40px;
+    margin-bottom: 56px;
 }
 
 .workshop-page-cards-container {
+    position: relative;
     margin-top: 80px;
 }
